<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ss"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/explore_include"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?attr/actionBarSize">

            <TextView
                android:id="@+id/ItemName"
                android:layout_width="226dp"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="Item Post"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.like.LikeButton
                android:id="@+id/star_button"
                android:layout_width="71dp"
                android:layout_height="69dp"
                app:icon_size="15dp"
                app:icon_type="heart"
                app:layout_constraintStart_toEndOf="@+id/ItemName"
                app:layout_constraintTop_toTopOf="@+id/ItemName" />

            <ImageView
                android:id="@+id/ItemPic"
                android:layout_width="207dp"
                android:layout_height="211dp"
                android:layout_marginTop="12dp"
                android:contentDescription="PictureOfItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ItemName"
                app:srcCompat="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/Description"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:text="Description:\n"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ItemPic" />

            <Button
                android:id="@+id/ViewMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="256dp"
                android:onClick="toMap"
                android:text="Expand Map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Description" />

            <TextView
                android:id="@+id/ContactInfo"
                android:layout_width="290dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="ContactInfo:
                                \n-Username:Raz
                                \n-PhoneNumber:21333333333
                                "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ViewMap" />

            <Button
                android:id="@+id/ViewSeller"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:onClick="toProfile"
                android:text="View Seller"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContactInfo" />

            <Button
                android:id="@+id/Buy"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="Sell it to:"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContactInfo" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="320dp"
                android:layout_height="183dp"
                app:layout_constraintBottom_toTopOf="@+id/ViewMap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Description"
                app:layout_constraintVertical_bias="0.726"
                tools:context=".MapsActivity" />

            <TextView
                android:id="@+id/Tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:gravity="center"
                android:text="Tags"
                app:layout_constraintBottom_toTopOf="@+id/Description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ItemPic"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:gravity="center"
                android:text="Price"
                app:layout_constraintBottom_toTopOf="@+id/Description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ItemPic"
                app:layout_constraintVertical_bias="0.4" />

            <EditText
                android:id="@+id/BuyerName"
                android:layout_width="123dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:ems="3"
                android:hint="Buyer's Name"
                android:inputType="textCapSentences|textAutoCorrect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Buy" />

            <TextView
                android:id="@+id/TradeLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:text="Trade Location:"
                app:layout_constraintBottom_toTopOf="@+id/map"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Description"
                app:layout_constraintVertical_bias="0.676" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/explore_include"
        layout="@layout/bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></include>
</androidx.constraintlayout.widget.ConstraintLayout>